# blueshark-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HARNESS_ROADMAP.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  forge-cli  install.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: prep_release.py
.github/workflows/: publish.yml  release.yml  test.yml
bench/create-greeter/: prompt.txt  verify.sh
bench/fix-failing-test/: mathx.py  prompt.txt  test_mathx.py  verify.sh
bench/implement-function/: prompt.txt  strutil.py  test_strutil.py  verify.sh
docs/models/: README.md  _TEMPLATE.md  sarvam-30b.md
forge/: __main__.py  agent.py  authority.py  backends.py  bench.py  bridge.py  cards.py  catalog.py  checkpoint.py  company.py  company_tui.py  config.py  contract.py  corpus.py  daemon.py  effects.py  execution.py  exemplars.py  export.py  faults.py  fixture.py  fleet.py  index.py  ledger.py  lifecycle.py  mcp.py  models_cmd.py  office.py  profile.py  profiles.py  receipt.py  reducer.py  registry.py  render.py  repl.py  replay.py  resume.py  session.py  setup.py  team.py  (+6 more)
site/: README.md  changelog.html  index.html  install.sh  vercel.json
tests/: __init__.py  _hermetic.py  test_agent_loop.py  test_authority.py  test_backends.py  test_bench.py  test_cards.py  test_catalog.py  test_checkpoint.py  test_cli.py  test_company.py  test_company_tui.py  test_completion_evidence.py  test_contract.py  test_corpus.py  test_effects.py  test_environment.py  test_execution.py  test_exemplars.py  test_export.py  test_faults.py  test_fixture.py  test_forge.py  test_hermetic.py  test_lifecycle.py  test_mcp.py  test_office.py  test_prep_release.py  test_profile.py  test_receipt.py  test_reducer.py  test_registry.py  test_render.py  test_replay.py  test_setup_tiers.py  test_team.py  test_testparse.py  test_tui_windows.py
tests/fixtures/: greet_bash_say.jsonl
tools/: changelog.py  tui_snapshot.py
