[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blueshark-forge"
dynamic = ["version"]
description = "A model-agnostic agentic runtime for the terminal — any local model becomes a capable agent. The intelligence lives in the harness, not the weights."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yash Pachchi" }]
keywords = ["agent", "llm", "local", "ollama", "vllm", "coding-agent", "harness", "agentic", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = []  # stdlib only — the whole point

[project.urls]
Homepage = "https://github.com/hackspaces/blueshark-forge"
Repository = "https://github.com/hackspaces/blueshark-forge"
Issues = "https://github.com/hackspaces/blueshark-forge/issues"

[project.scripts]
forge = "forge.__main__:main"

[tool.setuptools]
packages = ["forge"]

[tool.setuptools.dynamic]
version = { attr = "forge.__version__" }
